testing/tests/ui/is_defined.stderr
error: the previous template error derives from
 --> tests/ui/is_defined.rs:6:14
  |
6 |     source = r#"{% if x.y is defined %}{% endif %}"#,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:13:14
   |
13 |     source = r#"{% if true is defined %}{% endif %}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:20:14
   |
20 |     source = r#"{% if true is %}{% endif %}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:27:14
   |
27 |     source = r#"{% if x is %}{% endif %}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:34:14
   |
34 |     source = r#"{% if x is blue %}{% endif %}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:41:14
   |
41 |     source = r#"{% if x is blue.red %}{% endif %}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
